# WIP

./: .gitignore  .gitmodules  CMakeLists.txt
app/: main.cpp
cmake/: addLibGit2.cmake  doxyTarget.cmake  findCucumber.cmake  findGoogletest.cmake  listSubdirectories.cmake  styleEnforce.cmake
conf/: Doxyfile.in
libs/libDummy/include/: dummy.h
libs/libDummy/src/: dummy.cpp
test/unit/: Dummy_test.cpp
